# Real-Time-Electricity-Forecasting-System

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SYSTEM_DESIGN.md  pyproject.toml
api/: __init__.py  app.py  routes.py  schemas.py  websocket.py
config/: __init__.py  settings.py
core/: __init__.py  data_loader.py  feature_engine.py  metrics.py  pricing_engine.py
dashboard/: app.py
models/: __init__.py  baselines.py  forecaster.py  trainer.py
scripts/: evaluate.py  generate_plots.py  stream.py  train.py
streaming/: __init__.py  feature_buffer.py  pipeline.py  rate_limiter.py  replay_engine.py
tests/: __init__.py  test_api.py  test_feature_buffer.py  test_feature_engine.py  test_pipeline.py  test_pricing_engine.py  test_rate_limiter.py
