[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*", "core*", "models*", "streaming*", "api*", "dashboard*", "scripts*"]

[project]
name = "rt-electricity-forecast"
version = "1.0.0"
description = "Real-Time Electricity Price Forecasting via Two-Stage Load Prediction with Simulated Streaming Infrastructure"
requires-python = ">=3.10"
dependencies = [
    "lightgbm>=4.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "websockets>=12.0",
    "streamlit>=1.28",
    "plotly>=5.18",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandera>=0.18",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.1",
    "mypy>=1.7",
]
mlops = [
    "mlflow>=2.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
